new_tests/semantics/type/bad/091_CLASSTEMPLATE_2.cm
/*
    Type Error 405

    4| x + y
    The binary operation '+' has a left-hand side type of Int and a right-hand side type of String.

    Suggestion:
    The binary operation '+' must have both the left-hand side and right-hand side be the same type.
*/

class A<discr t, scalar s> {
    public x:t
    public y:s
    public method print() => Void {
        cout << x + y << endl
    }
}

def a:A<Int,String> = new A<Int,String>(x=5,y='hi')


